# code

./: .gitignore  .replit  GITHUB_DEPLOY.md  PROJECT_STATUS.md  README.md  SETUP.md  design_guidelines.md  package-lock.json  package.json  pyproject.toml  replit.md  start-all.sh  start-backend.sh
attached_assets/: alam_1759695976348.md
backend/: audio_processor.py  content_library.py  export_processor.py  main.py  requirements.txt  subtitle_processor.py  video_processor.py
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: ExportDialog.tsx  LayerPanel.tsx  ProjectCard.tsx  PropertiesPanel.tsx  SubtitleEditor.tsx  TemplateCard.tsx  ThemeToggle.tsx  Timeline.tsx  ToolPanel.tsx  UploadDialog.tsx  VideoPlayer.tsx
client/src/components/examples/: ExportDialog.tsx  ProjectCard.tsx  PropertiesPanel.tsx  SubtitleEditor.tsx  Timeline.tsx  ToolPanel.tsx  UploadDialog.tsx  VideoPlayer.tsx
client/src/hooks/: use-autosave.ts
client/src/lib/: videoApi.ts
client/src/pages/: Dashboard.tsx  Editor.tsx
server/: db.ts  index.ts  routes.ts  storage.ts
shared/: schema.ts
