[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles==24.1.0",
    "arabic-reshaper==3.0.0",
    "fastapi==0.115.0",
    "gdown>=5.2.0",
    "moviepy==1.0.3",
    "numpy==1.26.4",
    "pillow==10.4.0",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.0",
    "python-bidi==0.4.2",
    "python-multipart==0.0.12",
    "scipy>=1.16.2",
    "uvicorn[standard]==0.32.0",
    "yt-dlp>=2025.9.26",
]
